# QuickAccount

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  early_env.cpp  main.cpp  probe.cpp  resources.qrc
.github/workflows/: build.yml
android/: AndroidManifest.xml
android/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/res/values/: strings.xml
assets/icons/: app_icon.xpm
core/dao/: DatabaseManager.cpp  DatabaseManager.h  TransactionDAO.cpp  TransactionDAO.h
core/model/: Transaction.h
core/service/: TransactionService.cpp  TransactionService.h
qml/: BookPage.qml  HomePage.qml  Main.qml  RecordsPage.qml  SettingsPage.qml
